<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">beetsync</string>
    <string name="hostname">Hostname</string>
    <string name="port">Port</string>
    <string name="enable_auth">Enable Auth</string>
    <string name="enable_ssl">Enable SSL/TSL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="start_download">Start download new musics</string>
    <string name="q_progress_text">Queuing all the downloads</string>
    <string name="dl_progress_text">Total download progress</string>
    <string name="default_hostname">192.168.0.1</string>
    <string name="default_port">8337</string>
    <string name="button_cancel">Cancel All</string>
    <string name="button_re_download_all">Re-download everything</string>
</resources>
