<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:padding="10dp">
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_download"
                android:id="@+id/buttonStartDownload" android:layout_gravity="center_horizontal"
                android:onClick="onDownloadClicked"
                android:layout_below="@+id/progressBarAll" android:layout_alignEnd="@+id/buttonCancel"
                android:layout_marginTop="33dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textTotalItems" android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp" android:text="0 Item" android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/buttonReDownloadAll"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0 Ko"
                android:id="@+id/textTotalSize" android:layout_gravity="center_horizontal"
                android:layout_alignTop="@+id/textTotalItems" android:layout_alignEnd="@+id/progressBarQ"/>
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarAll" android:layout_gravity="center_horizontal"
                android:layout_below="@+id/testdlProgress" android:layout_centerHorizontal="true"/>
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarQ"
                android:layout_below="@+id/textQprogress" android:layout_centerHorizontal="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/q_progress_text"
                android:id="@+id/textQprogress"
                android:layout_centerVertical="true" android:layout_centerHorizontal="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/dl_progress_text"
                android:id="@+id/testdlProgress"
                android:layout_marginTop="39dp" android:layout_below="@+id/progressBarQ"
                android:layout_centerHorizontal="true"/>
        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_re_download_all"
                android:id="@+id/buttonReDownloadAll"
                android:enabled="false" android:layout_below="@+id/textTotalItems"
                android:layout_alignStart="@+id/progressBarQ" android:layout_marginTop="63dp"/>
        <Button style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/button_cancel" android:id="@+id/buttonCancel"
                android:enabled="true"
                android:onClick="onCancelClicked"
                android:nestedScrollingEnabled="false" android:layout_alignTop="@+id/buttonReDownloadAll"
                android:layout_alignEnd="@+id/textTotalSize"/>
    </RelativeLayout>
</LinearLayout>